@@ -1,7 +1,10 @@
 /**
- *	\file "lexer/art++-lex.ll"
+ *	\file "lexer/hackt-lex.ll"
  *	Will generate .cc (C++) file for the token-scanner.  
- *	$Id: art++-lex.ll,v 1.17 2005/06/21 21:26:35 fang Exp $
+ *	$Id: hackt-lex.ll,v 1.1.2.1 2005/11/04 22:23:28 fang Exp $
+ *	This file was originally:
+ *	Id: art++-lex.ll,v 1.17 2005/06/21 21:26:35 fang Exp
+ *	in prehistory.  
  */
 
 /***************** FOREWORD ***************************************************
@@ -63,13 +66,13 @@ using namespace ART::parser;
 
 // DIRTY MAKE HACK ALERT
 #if	defined(NO_FANCY_YYERROR)
-#include "parser/art++-parse.h"		/* symbols generated by yacc */
+#include "parser/hackt-parse.h"		/* symbols generated by yacc */
 #else
-#include "parser/art++-parse-prefix.h"	/* symbols generated by yacc */
+#include "parser/hackt-parse-prefix.h"	/* symbols generated by yacc */
 #endif
 
-#include "lexer/art_lex.h"
-#include "lexer/art++-lex-options.h"
+#include "lexer/hac_lex.h"
+#include "lexer/hackt-lex-options.h"
 
 namespace ART {
 /**
