@@ -1,19 +1,0 @@
-/**
-	\file "parser/art++-union.h"
-	Forawrd declarations needed to parse the YYSTYPE union
-	defined in "parser/art++-parse.h"
-	$Id: art++-union.h,v 1.1 2005/05/22 20:07:22 fang Exp $
- */
-
-#ifndef	__PARSER_ARTXX_UNION_H__
-#define	__PARSER_ARTXX_UNION_H__
-
-#include "AST/art_parser_fwd.h"
-#include "AST/art_parser_prs_fwd.h"
-#include "AST/art_parser_hse_fwd.h"
-#include "AST/art_parser_chp_fwd.h"
-
-using namespace ART::parser;
-
-#endif	// __PARSER_ARTXX_UNION_H__ 
-
