@@ -1,0 +1,21 @@
+/**
+	\file "parser/hackt-union.h"
+	Forawrd declarations needed to parse the YYSTYPE union
+	defined in "parser/hackt-parse.h"
+	$Id: hackt-union.h,v 1.1.2.1 2005/11/04 22:23:30 fang Exp $
+	This file was formerly known as:
+	Id: art++-union.h,v 1.1 2005/05/22 20:07:22 fang Exp
+ */
+
+#ifndef	__PARSER_HACKT_UNION_H__
+#define	__PARSER_HACKT_UNION_H__
+
+#include "AST/art_parser_fwd.h"
+#include "AST/art_parser_prs_fwd.h"
+#include "AST/art_parser_hse_fwd.h"
+#include "AST/art_parser_chp_fwd.h"
+
+using namespace ART::parser;
+
+#endif	// __PARSER_HACKT_UNION_H__ 
+
